# sp_vision_tutorial_26

./: .gitignore  CMakeLists.txt
configs/: standard3.yaml  standard4.yaml
homework_1/: CMakeLists.txt  main.cpp  tool.cpp  tool.hpp
io/: CMakeLists.txt  camera.cpp
io/gimbal/: gimbal.cpp  gimbal.hpp
lecture3/homework/: main.cpp
lecture3/homework/configs/: yolo.yaml
lecture3/homework/io/: example.cpp  my_camera.cpp  my_camera.hpp
lecture3/homework/tasks/: yolo.hpp
lecture4/homework/: CMakeLists.txt
lecture4/homework/io/: CMakeLists.txt
lecture4/homework/src/: main.cpp  video.cpp
lecture4/homework/tasks/: CMakeLists.txt  buff_solver.cpp  buff_solver.hpp  yolo11_buff.cpp
lecture4/homework/tools/: CMakeLists.txt
src/: task_1.cpp  task_2.cpp  task_3.cpp
tasks/auto_aim/: CMakeLists.txt  target.cpp  target.hpp  yolo.cpp
tasks/auto_aim/yolos/: yolov5.cpp  yolov5.hpp
