cmake_minimum_required(VERSION 3.16)
find_package(OpenCV REQUIRED)   
add_library(io STATIC 
    hikrobot/hikrobot.cpp    
    camera.cpp
)
target_include_directories(io PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/..  
    hikrobot/include
    ${OpenCV_INCLUDE_DIRS}
)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
  target_link_directories(io PUBLIC hikrobot/lib/amd64)
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
  target_link_directories(io PUBLIC hikrobot/lib/arm64)
else()
  message(FATAL_ERROR "Unsupported architecture: ${CMAKE_HOST_SYSTEM_PROCESSOR}!")
endif()
target_link_libraries(io MvCameraControl MVSDK usb-1.0)

